@@ -96,9 +96,10 @@ public class LogByteSizeMergePolicy extends LogMergePolicy {
   }
 
   /**
-   * Sets the minimum size for the lowest level segments. Any segments below this size will be
-   * merged more aggressively in order to avoid having a long tail of small segments. Large values
-   * of this parameter increase the merging cost during indexing if you flush small segments.
+   * Sets the minimum size for the lowest level segments. Any segments below this size are
+   * candidates for full-flush merges and be merged more aggressively in order to avoid having a
+   * long tail of small segments. Large values of this parameter increase the merging cost during
+   * indexing if you flush small segments.
    */
   public void setMinMergeMB(double mb) {
     minMergeSize = (long) (mb * 1024 * 1024);
